# BossBox

./: .coverage  .gitignore  =5.0  CLAUDE.md  LICENSE  PRINCIPLES.md  README.md  bossbox_spec_v3.md  cli.py  decomp_test.sh  pyproject.toml  version2_logs.txt
bossbox/: __init__.py  cli.py
bossbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bossbox/audit/: __init__.py  logger.py
bossbox/config/: loader.py
bossbox/gui/: app.py  security_center.py  wizard.py
bossbox/hypervisor/: hypervisor.py
bossbox/ingest/: __init__.py  analyzer.py  exceptions.py  sanitizer.py
bossbox/notify/: notifier.py
bossbox/pipeline/: backup.py  decomposer.py  envelope.py  exceptions.py  supervisor.py
bossbox/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  registry.py
bossbox/secrets/: __init__.py  exceptions.py  manager.py
bossbox/skills/: elicitor.py  loader.py
bossbox/vram/: __init__.py  budgeter.py  exceptions.py
config/: notify.yaml  providers.yaml  tiers.yaml
docs/: CLI_manual.md  CLI_manual.txt  bossbox_spec_v3.md  bossbox_spec_v4.1.md  bossbox_spec_v4.2.md  bossbox_spec_v4.3.1.md  bossbox_spec_v4.3.md  bossbox_spec_v4.md  principles.md
memory/: MEMORY.md  project_smtp_testing.md
playtest_logs/: step16_v2.txt  step17.txt  step17_v2.txt
skills/default/: README.md  injection_detector.yaml
skills/default/coherence/: code_file.yaml  contract.yaml  email.yaml  invoice.yaml  report.yaml
skills/default/schemas/: document_analysis.yaml
test_results/: regression_cli_vram_fix.txt  regression_compliance_audit.txt  regression_oom_retry.txt  regression_step07.txt  regression_step08.txt  regression_step08v2.txt  regression_step09.txt  regression_step10.txt  regression_step11.txt  regression_step12.txt  regression_step13.txt  regression_step14.txt  regression_step15.txt  regression_step16.txt  regression_step17.txt  regression_step17b.txt  regression_step17c.txt  regression_step17d.txt  regression_vram_free_fix.txt  step07_secrets.txt  step07_secrets_coverage.txt  step10_injection_detector.txt  step11_coherence_profiles.txt  step12_analyzer.txt  step13_backup.txt  step14_decomposer.txt  step15_supervisor.txt  step16_cli.txt
tests/: __init__.py  conftest.py  test_audit_logger.py  test_cli.py  test_cli_unittest.py  test_step01_scaffold.py
tests/config/: __init__.py  loader.py  test_loader.py
tests/ingest/: test_analyzer.py  test_analyzer_unittest.py  test_sanitizer.py  test_sanitizer_unittest.py
tests/notify/: test_notifier.py  test_notifier_unittest.py
tests/pipeline/: test_backup.py  test_backup_unittest.py  test_decomposer.py  test_decomposer_unittest.py  test_envelope.py  test_supervisor.py  test_supervisor_unittest.py
tests/providers/: test_anthropic.py  test_base.py  test_ollama.py  test_openai.py  test_registry.py
tests/secrets/: __init__.py  test_manager.py  test_manager_unittest.py
tests/skills/: test_coherence_profiles.py  test_coherence_profiles_unittest.py  test_injection_detector_profile.py  test_injection_detector_profile_unittest.py
tests/vram/: test_budgeter.py  test_budgeter_unittest.py
